<resources>
    <string name="app_name">Miguel_Barros_android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="empty_not_saved">Error on Creation</string>
    <string name="delete_all_notes">Delete all Notes</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="city">City</string>
    <string name="noteType">Type of Note</string>
    <string name="title">Title</string>

    // A P F T U

    <string name="automobile">Category: Automobile</string>
    <string name="personal">Category: Personal</string>
    <string name="needing_to_make">Category: Objetivos</string>
    <string name="work">Category: Work</string>
    <string name="Urgent">Category: Urgent</string>

    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="portugues">Portuguese</string>
    <string name="language">Language</string>
    <string name="private_notes">Private Notes</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="make_your_notes">Make Your Notes!</string>
    <string name="notas">notas</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_mapa">Map</string>
    <string name="google_maps_key">AIzaSyBoktDgOBi4zFl9YL3WAyV7LQThTzPaDIs</string>
    <string name="normal_map">normal_map</string>
    <string name="hybrid_map">hybrid_map</string>
    <string name="satellite_map">satellite_maps</string>
    <string name="terrain_map">terrain_map</string>
    <string name="mapa">Mapa</string>
    <string name="criar_nota">Create Nota</string>
    <string name="guardar">Save</string>
    <string name="mail">example@mail.com</string>
    <string name="editar">Edit</string>
    <string name="delete">Delete</string>
    <string name="editar">Edit</string>
    <string name="notDisponivel">Note not Available</string>
    <string name="editSuccess">Note edited</string>
    <string name="badHappen">Something went wrong,try again</string>
    <string name="notDisponivel">Note not Available</string>
    <string name="onlyYoursEdit">You can only edit your notes</string>
    <string name="onlyYoursDelete">You can only delete yout notes</string>
    <string name="SuccessDelete">Note deleted</string>


</resources>
