<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/map_type"
            android:orderInCategory="100"
            android:title="@string/mapa"
            app:showAsAction="never" >
        <menu>
            <item android:id="@+id/normal_map"
                    android:title="@string/normal_map"
                    app:showAsAction="never"/>
            <item android:id="@+id/hybrid_map"
                    android:title="@string/hybrid_map"
                    app:showAsAction="never"/>
            <item android:id="@+id/satellite_map"
                    android:title="@string/satellite_map"
                    app:showAsAction="never"/>
            <item android:id="@+id/terrain_map"
                    android:title="@string/terrain_map"
                    app:showAsAction="never"/>
        </menu>
    </item>
    <item
            android:id="@+id/createNota"
            android:orderInCategory="100"
            android:title="@string/criar_nota"
            app:showAsAction="never" />
</menu>