<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="intro.multiecras.miguel_barros_android.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/language"
        app:showAsAction="never" >
        <menu>
            <item android:title="@string/portugues"
                android:id="@+id/changeToPt"/>


            <item android:title="@string/english"
                    android:id="@+id/changeToEn"/>


        </menu>
    </item>
    <item
        android:id="@+id/clear_data"
        android:orderInCategory="100"
        android:title="@string/delete_all_notes"
        app:showAsAction="never" />
    
</menu>
