<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <Button
                    android:id="@+id/privateNotesBtn"
                    android:layout_width="145dp"
                    android:layout_height="37dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/private_notes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            <Button
                    android:id="@+id/createAccountBtn"
                    android:layout_width="165dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/create_account"
                    app:layout_constraintBottom_toTopOf="@+id/privateNotesBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

            <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="81dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordIn" />

            <EditText
                    android:id="@+id/usernameIn"
                    android:layout_width="227dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

            <EditText
                    android:id="@+id/passwordIn"
                    android:layout_width="223dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameIn" />

            <TextView
                    android:id="@+id/loginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TitleLabel" />

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="238dp"
                    android:layout_height="147dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/notas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/notes" />

            <TextView
                    android:id="@+id/TitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/make_your_notes"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>